EM re-wrote intro

--- a/escrito/urge13.tex
+++ b/escrito/urge13.tex
@@ -70,7 +70,7 @@
 %\begin{center} \textbf{$\rightarrow$~~Preliminary draft~~$\leftarrow$} \\ (please inquire for new version, \small{\url{emagar@itam.mx}})  \end{center}
 
 \begin{abstract}
-\noindent  Among Presidents' formidable proactive legislative powers is fast-track authority, sometimes called urgency authority. Seven Latin American presidents have the constitutional prerogative to impose on lawmakers a short time limit to discuss and vote bills using this track. The U.S. president has also been granted this authority through statutes. Yet, fast-track mechanisms are not always intended to set the agenda and speed legislation along. While in most countries non-compliance with the deadline has consequences for the legislature, there are cases where the absence of congressional action before the target date has no repercussions. We claim that fast track mechanisms may conceal motivations unrelated to speed. We argue that this authority gives presidents the ability to protect bills and agreements from undesirable amendments, transforming the president into the sole member of a Rules Committee with the unique ability to impose closed rules on the floor.  We derive hypotheses from a formal model of restrictive rules and test them using data from Chile for the 1998--2014 period. Extant research on Chile has shown that most executive proposals become urgent at some stage, and while urgency correlates with the odds of passage, they have found little evidence that it speeds consideration of the president's agenda in Congress.\end{abstract}
+\noindent  Among Presidents' formidable proactive legislative powers is fast-track authority, sometimes called urgency authority. Seven Latin American presidents have the constitutional prerogative to impose on lawmakers a short time limit to discuss and vote bills using this track. The U.S. president has also been granted this authority through statutes. Yet, fast-track mechanisms are not always intended to set the agenda and speed legislation along. While in most countries non-compliance with the deadline has consequences for the legislature, there are cases where the absence of congressional action before the target date has no repercussions. We show that fast track mechanisms may conceal motivations unrelated to speed, as it prevents amendments on the floor. We argue that this authority gives presidents the ability to protect bills and agreements, transforming the president into the sole member of a Rules Committee with the unique ability to impose closed rules on the floor.  We derive hypotheses from a formal model of restrictive rules and test them using data from Chile for the 1998--2014 period. Extant research on Chile has shown that most executive proposals become urgent at some stage, and while urgency correlates with the odds of passage, they have found little evidence that it speeds consideration of the president's agenda in Congress.\end{abstract}
 
 % ME PARECE QUE ESTO DE CHILE NO TENDRIA QUE IR AHI, LO QUEREMOS HACER LO MAS GENERAL POSIBLE, NO? We suggest that the main reason behind the use of fast-track authority in Chile is to give presidents the ability to shield bills coming from friendly committees from floor amendments. Thus, instead of being a mechanism to speed up the process, presidents' fast-track authority is similar to imposing a "closed rule" on the floor.
 
@@ -192,63 +192,21 @@
 
 \section{Introduction}
 
-It is well established that executives in presidential systems have legislative powers to achieve their goals. The most extended and better known is the veto, yet many other procedures exist that enable presidents to be part of the lawmaking process alongside Congress. One of them is executive decree powers, a centerpiece in many presidential constitutions. Characterized upon first glance as usurpation of the legislature's decision rights, we know now that countries vary in the extent to which assemblies become involved in the approval of decrees. Another mechanism that increases presidents' influence in the legislative agenda is fast track authority. Fast-track authority gives presidents the power to set the agenda by imposing a requirement to hold a vote on a bill within a certain period of time, allowing the executive to interfere with congress' voting schedule and floor control. 
+It is well established that presidents enjoy a wide range legislative powers to achieve their goals. Most common and best known is the veto, a final say on all new legislation. Yet many other procedures exist that enable presidents to be part of the lawmaking process alongside Congress. One of them is executive decree powers, a centerpiece in many Latin American constitutions. Characterized upon first glance as usurpation of the legislature's decision rights, we know now that constitutions vary in the extent to which they involve assemblies in the approval of decrees. Less well known is urgency authority, giving presidents power to set the agenda by imposing a requirement to hold a vote on a bill within a short period of time. Similar in essence to fast track authority in the United States, presidents with urgency authority earn the ability to interfere with Congress' voting schedule and floor control. 
 
-%By using this prerogative, presidents can impose a deadline for legislators to discuss and vote bills. 
-%Compared to the US presidential system, where an impatient president has no formal resources to push legislators to act on stagnant legislation, broad reaching
+Urgency authority seems to contradict classic notions of separation of powers. ``The magistrate in whom the whole executive power resides cannot of himself make a law, though he can put a negative on every law'' argues \citet{madison.47} in Federalist 47. The Framers also warn against expediting lawmaking and arresting deliberation. ``In the legislature promptitude of decision is oftener an evil than a benefit'' \citep{hamilton70.1788}. Despite concerns like these, eight presidential systems of the Americas give executives fast track authority: Brazil, Chile, Colombia, Ecuador, Mexico, Paraguay, Uruguay, and (in statutes) the United States \citep{morgenstern.2002b,garcia.montero.presidentes.2009}.
 
-Fast-track authority seems to contradict classic notions of separation of powers. In Federalist 47, Madison argues that the ``magistrate in whom the whole executive power resides cannot of himself make a law, though he can put a negative on every law'' \citep{madison.47}. The Framers also warn against expediting lawmaking and arresting deliberation. ``In the legislature promptitude of decision is oftener an evil than a benefit'' \citep{hamilton70.1788}.
+We examine presidential urgency authority in the Americas. The paper claims that it significantly increases executive influence in lawmaking through the ability to impose a restrictive procedure in lawmaking---and not, as intuition might suggest, by speeding up the consideration of bills. The point stems from an appraisal of the region's constitutions, where it strikes that some urgency powers are not binding. That is, no formal consequences fall upon legislators not complying with deadlines. Such are the cases of Chile, Colombia, and Mexico, where failure to act within the specified period neither stops the whole legislative process nor automatically turns the bill into law, as elsewhere. Next we note that in Chile, the sole case that has received more or less systematic attention on the particular, urgency authority is used routinely. Three of every five bills that Chilean presidents proposed since 1990, and at times more, qualified as urgent at some stage of the legislative process.
 
-% When a bill declared urgent: Always Needs Legislature Support
-%Colombia and Chile: No reversion point if Congress does not comply. Any topic 
-%Brazil: it goes to the top of the schedule and all voting activity in the floor stops (45 days)
-%USA: International Trade Agreements
+We resolve the apparent paradox of a president throwing urgent bites quite frequently despite having no teeth at all with a lesson from the United States. Everyone there seems to recognize that the key feature making fast track authority relevant is the closed rule, not its acceleration properties. Closed rules are one form of restrictive procedure \citep{oleszek.2001}: when a bill reaches the floor with such a rule, legislators cannot offer any amendments. They simply vote the bill up or down. 
 
-%If Legislature does not  act within certain number of days, bill becomes law
-%Uruguay: 3/5 of member can remove “urgency” label, no more than 1 urgent bill at a time
-%Ecuador: economic issues, limit in number of urgent bills at one time
-%Paraguay: any subject
-%USA: Howell & Moe (2017) argue for constitutional reform to grant U.S. presidents universal fast track authority 
+All Latin American constitutions adopting the urgency authority remain silent about the closed rule, explaining why comparative politics has overlooked this key feature of the urgency authority. But, in the Chilean case at least, inspection of the chamber's standing orders reveals that presidential urgency qualifications entail precisely such a restrictive procedure in the floor consideration of a bill. Our argument here joins a growing literature on restrictive rules in legislatures worldwide.\footnote{See \citet{dion.huber.1996,doring.restrictiveRules.2003,huber.1996a,krehbielRestrictiveRules1997,heller.2001,weingast.1992,schickler.richRules1997,cox.mccubbins.1997,amorim.cox.mccubbins.2003,calvo.2014argBook,sin.2014,denhartog.2004phd}, among others.} Closed rules in general, and urgency authority of the fast-track type in particular, protect the agreements reached in committee as they cannot be undone later in the plenary session. What makes the urgency authority special, and particularly interesting, is that the president joins legislative leaders in deciding whether a bill proceeds to the floor with a closed rule or will be open for floor amendments. We find that the closer the preferences between the president and the committee chair, the more probably the president will use fast track authority to shield a bill from amendments. 
 
-%\ges{Here we need to make a footnote on the US, that in the US that does not apply for cases where Congress gave the president fast track authority, which has been mostly for Trade agreements with other nations. \\ Not happy about this quote yet, but I think is more appropriate than the previous one.  We need something about separation of powers.}
-
-%\emm{La ventaja de 47 es que enfatiza la separación de poderes. La ventaja de 70 es que subraya la aceleración del proceso, que es lo que la literatura (y el término urgencia) han considerado. Vale[abr-2018] las ha incluido ambas.}
-
-% federalist 70
-% Upon the principles of a free government, inconveniences from the source just mentioned [collective actors] must necessarily be submitted to in the formation of the legislature; but it is unneccessary, and therefore unwise, to introduce them into the constitution of the executive. It is here too that they may be most pernicious. In the legislature promptitude of decision is oftener an evil than a benefit. The differences of opinion and the jarring of parties in that department of the government, though they may sometimes obstruct salutary plans, yet often promote deliberation and circumspection, and serve to check the excesses of the majority. When a resolution too is once taken, the opposition must be at an end. That resolution is a law, and resistance to it is punishable. --> EMM la urgencia opera contra esta delibaración benévola...
-% federalist 47 "The magistrate in whom the whole executive power resides cannot of himself make a law, though he can put a negative on every law" 
-
-EMM [7jun18]: HAY QUE CAMBIAR EL PARRAFO SIGUIENTE PARA QUE NO SEA REPETITIVO CON LA SECCION DE LIT REVIEW...
-
-Despite these concerns, eight presidential systems of the Americas give executives fast-track authority: Brazil, Chile, Colombia, Ecuador, Mexico, Paraguay, Uruguay, and (in statutes) the United States \citep{morgenstern.2002b,garcia.montero.presidentes.2009}. A shared characteristic of fast track authority is that if the legislature fails to act within a certain period, the bill either becomes a law without the legislature's approval, or the whole legislative process comes to a halt until the floor votes on the bill. For example, in Brazil the president can declare any executive-initiated bill ``urgent'' at any time. The assembly must act on bills marked urgent within forty five days, else the bill takes precedence over all other legislative business. In Uruguay, legislators must act within a pre-specified, short period of time, as failure to do so converts the fast-tracked bill into law. Thus, by institutional design, the president has an effective tool to influence the congressional agenda, as she can force Congress the debate and vote on a bill.
-
-A puzzle emerges. Given the presumed motive of achieving a faster pace, it strikes that some fast track mechanisms are not binding. That is, no formal consequences fall upon legislators not complying with deadlines. Such are the cases of Chile, Colombia, and Mexico, where failure to act within the specified period neither stops the whole legislative process nor automatically turns the bill into law. Scholars have argued that the benefit of fast-track authority in these cases may lie in its signaling capacity. Quoting a former legal chief of staff at the Chilean Presidency, \citet{berrios.gamboa.fiscChile.2006} describe the thirty day deadline as ``merely symbolic, exerting no real pressure on Congress'' (p.~117). As we explain below, shorter deadlines can be chosen in Chile and \citet{aleman.navia.UrgChi.2009} see these as ``signals of presidential attention'' (p.~404), so the assembly may face unobserved political costs by ignoring or rejecting salient proposals. 
-%Maybe add here some of the country details that Gisela is working on? This paragraph is too short!
-
-% ON CHILE - THIS GOES LATER The power of fast track authority in Chile fades when compared to its counterparts in the Americas. Although in Chile any bill can be declared urgent at any time, and the chamber must discuss and vote on the bill within 30 days (depending on the type of urgency), there are no consequences for non-compliance. When the period provided for Congress to act expires, the legislative process does not stop, nor do bills become law automatically. That is, there is no punishment for the legislature if it fails to make a decision within the specified number of days. Indeed, when the deadline for the expedite process is nearing, the president usually removes the previous urgency and issues a new one.  The data shows no difference in the speed of bills declared urgent, which take about 29 weeks until they reach the floor, and the rest, which take about 29.7 weeks. For example, in his study of the urgency prerogative in Chile's first post-transition administration, \citet{siavelis.2002} revealed the high frequency with which President Aylwin qualified bills as urgent, and found mixed evidence on whether such bills had a more expedited legislative process and an improved likelihood of passage. Given that fast track authority does not seem to expedite legislation,one would expect the president not to use them at all. However, this is not the case: about 60 percent of executive proposals are declared urgent during the legislative process. Why?
-
-%Fast track authority can be classified into two main types: a bill on fast track may always need the approval of the legislature, or it may become law if Congress does not act within a certain number of days. Among the first type is the urgency authority present in Brazil, Chile, Colombia, and the U.S.  In Colombia, fast-track bills go to the top of the voting schedule immediately, and all activity on the floor stops until legislators vote on the bill. In the U.S., the president has fast track authority on international trade agreements. Among those countries in which an "urgent" bill becomes a lw if the legislature does not approve or reject within a certain number of days, are Ecuador, Paraguay, and Uruguay. In Ecuador, the president has fast track authority only on economic matters and can only marked as urgent one bill at a time. In Paraguay, the president can declare urgency on any bill. In Mexico, the president can propose up to two urgent bills at the start of each biannual ordinary period, and these bills must be scheduled for floor consideration within 30 days.\footnote{Constitutional articles vesting this authority are the following: Brazil articles 62 and 64; Chile article 74; Colombia article 163; Mexico article 71; and Uruguay article 168.7.}
-
-% ESTO TAMBIEN VA A LIT REVIEW Regarding the United States, \citet[][:145]{howell.moe.Relic2016} provide an argument in favor of providing presidents with fast-track authority. They argue that in order to have coherent, effective government, reform needs to put the president at the center of the legislative process by giving her fast-track powers: ``presidents should be granted enhanced agenda-setting powers to propose bills to Congress, which Congress should then be required to vote on without amendment, on a strictly majoritarian basis, within a fixed period of time. [...] [T]he Constitution would be amended to grant the president \emph{permanent} fast-track authority over \emph{all} policy matters (including budgets and appointments).'' 
-
-Fast track authority may conceal purposes beyond providing signals or setting the agenda. This paper builds a solution to the puzzle presented by the existing literature. We claim that the very need for speedy passage calls for mechanisms to accelerate the legislative process, and those mechanisms, scarcely noticeable, protect bills from amendments on the floor. When the president labels a bill as urgent, this bill cannot be changed on the floor, which makes for a faster approval process but also protects presidential preferences.
-
-We find that the literature has largely ignored this important consequence of the rule: when urgent bills come to the floor, \emph{they cannot be modified}. Legislators have to vote them up or down, with no possibility to introduce amendments. Thus, when qualified as urgent, the bill passed by the floor is identical to the one that emerged from committee. Urgency therefore protects the agreements reached in committee as they cannot be undone later in the plenary session.
-
-%While analyses on the United States are apply to fast-track authority only for trade agreements, it nonetheless seems suggestive that \citet{lohmann-ohalloran.1994} argue that Congress constrains the president under divided government and when partisan conflict is high. This seems to reinforce the idea that congress may want to secure the president's ability to negotiate and decide especially when her preferences are close to its own. This is precisely what we argue that is achieved through fast track when it involves mechanisms that restrict floor participation.
+The paper proceeds as follows. Section 2 describes the differences among the urgency authority in Latin American constitutions while engaging with the literature. In section 3 we dig into fast track authority in the United States. Despite important differences, we posit that is essentially urgency authority confined to international trade policy. We also highlight reliance on the closed rule, emphasizing how fast track can be used not only to speed up the process, but also to protect bills from the floor amendment process. We schematize the sequence of committee reports and floor readings inspired by the Chilean Congress' standing orders to show that it is much harder to introduce plenary amendments to urgent than non-urgent bills. Section 4 extends a simple model of restrictive rules from the U.S.\ House of Representatives to fast track authority. The spatial model highlights the logic behind the procedural choice: when the executive anticipates that a committee report of her liking is vulnerable to floor amendments, she declares it urgent imposing a take-it-or-leave-it vote on the floor. We derive testable hypotheses. Section 5 offers a test with data from Chile. Examination of all bills in the 1998--2014 period through multivariate analysis reveals that, other features constant, bills reported by committees chaired by the president's party/coalition have a higher probability to become urgent. Section 6 elaborates implications of our model and findings for the study of separation of powers and concludes. 
 
 %Pongamos esta footnote cuando el empirical analisis este arreglado. \footnote{This is true as of March of 2014. Before then, it was true only for one type of urgency, ``supreme urgency'' (\emph{suma urgencia}).} 
 
-The case of Chile illustrates this point well. By means of fast-track authority, the president is able to decide whether a bill will proceed to the floor with a closed rule or will be open for floor amendments. This means that, unlike the case of the United States, where committee members negotiate with the leadership and the Rules Committee to receive closed rules towards floor consideration, in Chile committee members negotiate with the president to receive such rule. In other words, in Chile the president takes on the role of the congressional leadership and Rules Committee combined. 
-
 %This unique presidential prerogative opens the door for multiple strategies both for the committee and the president regarding the conditions under which they will push for a bill to receive the urgency label. 
-
-%We claim that the poor signal given by bills designated urgent in Chile may bear relation to selection bias. Strategic presidents are likely to target bills that differ from the rest in important ways, so that the set of bills receiving urgent status is not random. Right censoring may also be an obstacle. A more fundamental problem is institutional indeterminacy. \citet{berrios.gamboa.fiscChile.2006} warn against overstating the Chilean urgency authority's importance, as non-compliance entails no penalty for Congress. %---unlike the Brazilian, Colombian, and Uruguayan variants.
-%This paper argues that the effects of urgency authority are procedural. Proposals the president declares urgent in Chile are considered under restrictive rules by the chamber's plenary. If the rationale is expediting the legislative process, one key consequence is to effectively shield committee reports from amendments by the plenary.
-
-The paper proceeds as follows. Section 2 engages with the existent literature and describes the differences among fast track authority in presidentialisms in the Americas.  In section 3 we show the differences between bills with and without fast track authority, emphasizing how fast track can be used not only to speed up the process, but also to protect bills from the floor amendment process.  We schematize the sequence of committee reports and floor readings to show that it is much harder to introduce plenary amendments to urgent than non-urgent bills. Section 4 extends a simple model of restrictive rules from the U.S.\ to fast track authority. The spatial model highlights the logic behind the procedural choice: when the executive anticipates that a committee report is vulnerable to floor amendments, she declares it urgent imposing a take-it-or-leave-it vote on the floor. We derive testable hypotheses. Section 5 tests them with data from Chile. Examination of all bills in the 1998--2014 period through multivariate analysis shows that, other features constant, bills reported by committees chaired by the president's party/coalition have a higher probability to become urgent. Section 6 concludes. 
-
-\vp{revisar este último párrafo cuando tengamos respuestas a mi comment anterior}
 
 \section{Constitutional urgency authority}
 
@@ -264,7 +222,7 @@ The Uruguayan constitution, giving Congress one-hundred days to consider urgent 
 
 And the Chilean, Colombian, and Mexican constitutions are indeterminate. While all mandate a thirty-day period for each chamber to consider and vote bills that presidents qualify as urgent, and none place restrictions to the type of legislation eligible, neither sets a reversionary outcome (i.e., plenary arrest or automatic adoption) if the legislature has not acted when it expires \citep{nolte.2003,carroll-pachon.2016,magar.2014-refConst}.\footnote{The Mexican president earned urgency authority in 2012 and is constrained in timing and frequency: she can introduce two ``preferential'' bills at the beginning of ordinary legislative periods in February and September.}
 
-There are no studies of urgent bills in Colombia and Mexico that we know of. But Chile's urgency authority has been examined more extensively, finding an apparent paradox. Few acceleration effects are discernible. \citeauthor{siavelis.2002}' \citeyearpar{siavelis.2002} study of Chile's first post-transition administration shows a mild difference in the pace of executive-initiated bills declared urgent, which take about 19 weeks until they reach the floor, and the rest, which take almost 23 weeks. And the effect in success is nil. The success rate of executive bills was 64 percent when urgent, 63 when not. \citet[][:51]{nolte.2003} argues that urgency authority does not give the Chilean president much power to determine the fate of her initiatives because urgent bills still need congressional support to become law. So the size and discipline of the president's congressional majority is the determinant factor, not urgency authority. Given that urgency authority does not seem to expedite legislation nor make passage likelier, one would expect the president not to use it at all. However, this is not the case: about 60 percent of executive proposals are declared urgent at some point in the legislative process. 
+There are no studies of urgent bills in Colombia and Mexico that we know of. But Chile's urgency authority has been examined more extensively, uncovering an apparent paradox. Few acceleration effects are discernible. \citeauthor{siavelis.2002}' \citeyearpar{siavelis.2002} study of Chile's first post-transition administration shows a mild difference in the pace of executive-initiated bills declared urgent, which take about 19 weeks until they reach the floor, and the rest, which take almost 23 weeks. And the effect in success is nil. The success rate of executive bills was 64 percent when urgent, 63 when not. While the set of bills receiving urgent status is not random and that is an obstacle to measure effects properly, \citet[][:51]{nolte.2003} argues that urgency authority does not give the Chilean president much power to determine the fate of her initiatives because urgent bills still need congressional support to become law. So the size and discipline of the president's congressional majority is the determinant factor, not urgency authority. Given that urgency authority does not seem to expedite legislation nor make passage likelier, one would expect the president not to use it at all. However, this is not the case: about 60 percent of executive proposals are declared urgent at some point in the legislative process. 
 
 Others note that even though Chilean urgency authority lacks teeth, it operates as a signaling device, explaining the high incidence \citep{berrios.gamboa.fiscChile.2006,aninat.exagCoop2006}. \citet{aleman.navia.UrgChi.2009} argue that bills that qualify as urgent are those that encompass the president's legislative priorities. Distinguishing degrees of urgency (more on which below), they find that ``bills that receive [the top two degrees of] urgency motions appear significantly more likely to pass'' (p.~404). Although these findings show that the president's priorities do become law, it is not clear what mechanism is behind the `urgent' label.
 
@@ -288,7 +246,7 @@ And it is the difference of procedure that is most interesting. Under this autho
 
 Fast track authority in the U.S.\ highlights this important consequence of the rule that the comparative politics literature has overlooked: when urgent bills come to the floor, \emph{they cannot be modified}. Latin American constitutions remain silent about this. But in Chile, the case we analize below, the standing rules of Congress mandate a closed rule as fast track does in the U.S. \citep{sotoCongChile2015}.\footnote{See the Cámara's standing rules (\emph{Reglamento}), especially arts.\ 118--189.} 
 
-\section{An example}
+\section{Example}
 
 To illustrate how fast track authority, when combined with restrictive rules for passage, achieves the goal of speeding bills along while ensuring the president outcomes of her liking, we develop a hypothetical bill and two amendments. The proposal aims to offer student grants while also paying for teacher compensations. Three articles, summarized in Table \ref{T:example}, make the bill up. The first funds the program, appropriating \$200. The second splits the funds into equal parts. And the third allocates the parts. So, if approved, students and teachers would receive \$100 each. 
 
@@ -303,7 +261,7 @@ Art 3. & one for students, one for teachers & ---                               
 \end{tabular}
 \end{table}
 
-The example assumes a forward agenda, such as is used in Chile and Mexico. The essential feature of a forward agenda is the absence of a final vote against the status quo, as in backward agendas \citep{heller.weldon.2003,schwartz.2008}. More precisely, the first vote (called general vote) pits the proposal against the status quo. If the proposal wins, subsequent votes (called particular) pit amendments, if any, against the project article-by-article, and the status quo changes with every subsequent vote. Our example works with a backward agenda because fast track authority prevents the introdution of floor amendments (particular votes are not held).  
+The example assumes a forward agenda, such as is used in Chile and Mexico. The essential feature of a forward agenda is the absence of a final vote against the status quo, as in backward agendas \citep{heller.weldon.2003,schwartz.2008}. More precisely, the first vote (the general reading) pits the proposal against the status quo. If the proposal wins, subsequent votes (particular reading) pit amendments, if any, against the project article-by-article, and the status quo changes with every subsequent vote. Our example also works with a backward agenda because fast track authority prevents the introdution of floor amendments (particular votes are not held).  
 
 Add tension by assuming a prior commitment of \$150 for teachers. To honor it, a committee member offers an amendment to article 1 (against the committee majority). If approved, this would beef up funds to \$300. Committee chairs, or a majority of committee members, or other powerful cameral officers (e.g.\ the Appropriations committee in the U.S.\ House or the government in France and Greece) may or may not be able to derail undesired amendments in committee---by declaring them inadmissible, outside time constraints, adopting special rules, and so forth. This would be a form of \emph{ex-ante} veto: if unwilling to appropriate extra money, the committee may prevent the amendment from reaching the floor. In which case, the distributive route remains practicable: less for students, more for teachers. An amendment to article 2, such that teachers get three-fourths of the \$200 fund, would honor the commitment---at the students' expense. If offered later in the process, when the bill enters the floor stages (as our example assumes), it should also make it harder for the chair and other veto gates to act against the second amendment. 
 
@@ -419,7 +377,7 @@ Above, this paper claims that fast-track authority gives presidents the ability 
 %% \item El gobierno  $p>q>p_2>p_1>p_{12}$.
 %% \end{itemize}
 
-\section{Extending a Model of Restrictive Rules to Fast-track Authority}
+\section{A Model of Fast Track Authority}
 
 \begin{figure}
   \centering
@@ -460,7 +418,7 @@ Above, this paper claims that fast-track authority gives presidents the ability 
 
 The Chilean Constitution of 1980 sets the institutional order allocating decision rights across the branches in Chile. Presidents are elected for four-year terms and immediate reelection is forbidden. Legislators are elected through direct elections in two-member districts. Its 120 Lower House representatives are elected for four-year terms, while the thirty-eight senators serve eight-year terms.\footnote{A reform of the electoral system approved in April 2015, increased the number of legislators and proportionality. Changes became effective in the 2017 elections, affecting the new composition of congress.} Throughout the nineties and at least until 2018, parties in Congress have organized in two stable coalitions, the center-left Concertación (later Nueva Mayoría), and the center-right Alianza (later Chile Vamos). 
 
-As in other presidential systems, Chilean presidents concentrate considerable legislative power (Siavelis 2002; Payne, 2006; Author, 2017). Their prerogatives include exclusive proposal power in key legislative areas such as the budget, finance, and administration. The president can affect the congressional agenda by marking bills “urgent”, which imposes time constraints on their discussion. She can also propose amendments to bills under consideration. In the twenty-four years between the return to democracy and the end of Piñera’s administration in 2014, a total of 8,483 bills were proposed. The Chilean congress passed 2,617 of those bills (approximately one third). Most of these bills had been marked urgent at some point of their life span, and defying commom sense, some were marked urgent several times. 
+Chilean presidents concentrate considerable legislative power \citep[][, Payne 2006, Author 2017]{baldez.carey.1999,siavelis.2002}. Their prerogatives include exclusive proposal power in key legislative areas such as all new spending, finance, and administration. The president can affect the congressional agenda by marking bills urgent, which imposes time constraints on their discussion. She can also propose amendments to bills under consideration. In the twenty-four years between the return to democracy and the end of Piñera’s administration in 2014, a total of 8,483 bills were proposed. The Chilean congress passed 2,617 of those bills (approximately one third). Most of these bills had been marked urgent at some point of their life span, and defying commom sense, some were marked urgent several times. 
 
 However, counter mainstream expectations that more powerful presidents use their prerogatives more broadly \citep{odonnell.1993,odonnell.1994}, Chilean politics function in a consensual manner and presidents rarely use their more confrontational prerogatives, such as decrees and total vetoes. As other Latin American presidents, the Chilean president can enact legislation by decree, what Shugart and Carey (1998) term Constitutional Decree Authority. However, between 1990 and 2014 only two decrees were enacted in Chile, as opposed to hundreds enacted in Argentina (694 between 1983 and 2007) and Brazil (744 between 1988 and 2010). This paper assumes that consensual behavior is crafted through institutional procedures. Understanding which procedures are key in this regard is part of this paper's contribution. %It sets out to understand the conditions under which presidents can move along their agendas while maintaining politics consensual. 
 
@@ -1013,17 +971,15 @@ Finally, there are time trends in fast-track authority usage that simulations re
 
 \section{Discussion}
 
+This paper has argued that the effects of urgency authority are procedural. Proposals that presidents qualify as urgent (in Chile, but perhaps elsewhere too) are considered under restrictive rules by the chamber's plenary. If the rationale is expediting the legislative process, one key consequence is to effectively shield committee reports from amendments by the plenary.
+
+Thus, in all and as part of a literature that highlights the extraordinary legislative influence of presidents in Latin America, emphasis has been placed on presidents' exclusive proposal rights for certain bills, their capacity to veto bills totally and partially, and to propose amendments at different stages of the legislative process \citep{carey.shugart.1998,baldez.carey.1999,aleman.navia.UrgChi.2009,tsebelis.aleman.2005}. Less attention has been devoted to the influence granted to the president when she can declare certain bills urgent and by doing so, affect how congress deals with its agenda. We view this influence as stemming from the prerogative to qualify bills ``urgent'', which in certain cases imposes restrictive rules for floor consideration, apart from acting as a bill accelerator or a signal of presidential priority.
+
+
+
 LO DE HOWEL MOE NO QUEDABA BIEN EN SECCION 3, DISTRAIA. LO MOVI AQUI. EN ESTA CONCLU HAY QUE LEER HOWELL Y MOE A LA LUZ DE NUESTROS HALLAZGOS PARA MOSTRAR POR QUE DEBE IMPORTARLE NUESTRO PAPER A UN AMERICANISTA.
 
 In an excellent and very provocative book, \citet[][:145]{howell.moe.Relic2016} make an argument in favor of giving US presidents fast-track authority in all realms of policy, not just trade agreements. They argue that in order to have a coherent and effective government, a constitutional reform needs to put the president at the center of the legislative process by giving her fast-track powers: ``presidents should be granted enhanced agenda-setting powers to propose bills to Congress, which Congress should then be required to vote on without amendment, on a strictly majoritarian basis, within a fixed period of time. [...] [T]he Constitution would be amended to grant the president \emph{permanent} fast-track authority over \emph{all} policy matters (including budgets and appointments).'' If Congress fails to act with a certain period of time, then the presidential proposal should become law. This reform would make the US closer to the design of Uruguay, Ecuador, or Paraguay in Latin America. 
-
-
-
-
-
-ESTO PARA LA CONCLU
-
-Thus, in all and as part of a literature that highlights the extraordinary legislative influence of presidents in Latin America, emphasis has been placed on presidents' exclusive proposal rights for certain bills, their capacity to veto bills totally and partially, and to propose amendments at different stages of the legislative process \citep{carey.shugart.1998,baldez.carey.1999,aleman.navia.UrgChi.2009,tsebelis.aleman.2005}. Less attention has been devoted to the influence granted to the president when she can declare certain bills urgent and by doing so, affect how congress deals with its agenda. We view this influence as stemming from the prerogative to qualify bills ``urgent'', which in certain cases imposes restrictive rules for floor consideration, apart from acting as a bill accelerator or a signal of presidential priority. Our argument here joins a growing literature on restrictive rules in legislatures worldwide.\footnote{See \citet{dion.huber.1996,doring.restrictiveRules.2003,huber.1996a,krehbielRestrictiveRules1997,heller.2001,weingast.1992,schickler.richRules1997,cox.mccubbins.1997,amorim.cox.mccubbins.2003,calvo.2014argBook,sin.2014,denhartog.2004phd}, among others.} 
 
 
 
